--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- HTML i den her. Javascript i app.js -->
 <!-- http://bl.ocks.org/d3noob/8952219 -->
+<!-- https://jsfiddle.net/matehu/w7h81xz2/ -->
 <!DOCTYPE html>
 <meta charset="utf-8" />
 
@@ -11,7 +12,7 @@
 
         /* Comparison line */
         line#limit {
-            stroke: #FED966;
+            stroke: #ff0000;
             stroke-width: 3;
             stroke-dasharray: 3 6;
         }
@@ -22,10 +23,29 @@
             stroke: #000;
             shape-rendering: crispEdges;
         }
+
+        .toolTip {
+            position: absolute;
+            display: none;
+            min-width: 80px;
+            height: auto;
+            background: none repeat scroll 0 0 #ffffff;
+            border: 1px solid #6F257F;
+            padding: 14px;
+            text-align: center;
+        }
+
+        h1 {
+            width: 500px;
+            margin: 0 auto;
+            font-family: "Lucida Console", Monaco, monospace;
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
+    <h1 class='p.textHeader'>Water Level in Lake Mead</h1>
 
     <script src="http://d3js.org/d3.v3.min.js"></script>
 
@@ -36,8 +56,8 @@
                 bottom: 70,
                 left: 40
             },
-            width = 1200 - margin.left - margin.right,
-            height = 300 - margin.top - margin.bottom;
+            width = screen.width - margin.left - margin.right,
+            height = screen.height / 2 - margin.top - margin.bottom;
 
         // Parse the date / time
         var parseDate = d3.time.format("%Y").parse;
@@ -102,7 +122,7 @@
                 .attr("x", function (d) {
                     return x(d.date);
                 })
-                .attr("width", x.rangeBand() / 1.2) // width
+                .attr("width", x.rangeBand() / 1.4) // width
                 .attr("y", function (d) {
                     return y(d.value);
                 })
@@ -110,11 +130,14 @@
                     return height - y(d.value);
                 })
                 .on("mouseenter", function (d, i) {
-                    d3.select(this).attr({
-                        style: "fill: red"
-                    })
+                    d3.select(this)
+                        .transition()
+                        .duration(500)
+                        .attr({
+                            style: "fill: red",
+                        })
 
-                    console.log(d3.select(this));
+                    // add comparioson line
                     line = svg.append('line')
                         .attr('id', 'limit')
                         .attr('x1', 0)
@@ -123,9 +146,12 @@
                         .attr('y2', d3.select(this).attr('y'))
                 })
                 .on("mouseout", function () {
-                    d3.select(this).attr({
-                        style: "fill: steelblue"
-                    })
+                    d3.select(this)
+                        .transition()
+                        .duration(500)
+                        .attr({
+                            style: "fill: steelblue",
+                        })
                     svg.selectAll('#limit').remove()
                 });
         });
