--- a/index.html
+++ b/index.html
@@ -1,173 +1,208 @@
 <!-- HTML i den her. Javascript i app.js -->
 <!-- http://bl.ocks.org/d3noob/8952219 -->
 <!-- https://jsfiddle.net/matehu/w7h81xz2/ -->
-<!DOCTYPE html>
-<meta charset="utf-8" />
+<!DOCTYPE html> <meta charset="utf-8" />
 
 <head>
-    <style>
-        .axis {
-            font: 10px sans-serif;
-        }
+  <style>
+    .axis {
+      font: 10px sans-serif;
+    }
 
-        /* Comparison line */
-        line#limit {
-            stroke: #ff0000;
-            stroke-width: 3;
-            stroke-dasharray: 3 6;
-        }
+    /* Comparison line */
+    line#limit {
+      stroke: #ff0000;
+      stroke-width: 3;
+      stroke-dasharray: 3 6;
+    }
 
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: #000;
-            shape-rendering: crispEdges;
-        }
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: #000;
+      shape-rendering: crispEdges;
+    }
 
-        .toolTip {
-            position: absolute;
-            margin: auto;
-            display: none;
-            /* min-width: 80px; */
-            height: auto;
-            background: none repeat scroll 0 0 #ffffff;
-            border: 1px solid #6F257F;
-            padding: 2;
-        }
+    .toolTip {
+      position: absolute;
+      margin: auto;
+      display: none;
+      /* min-width: 80px; */
+      height: auto;
+      background: none repeat scroll 0 0 #ffffff;
+      border: 1px solid #6f257f;
+      padding: 2;
+    }
 
-        h1 {
-            width: 500px;
-            margin: 0 auto;
-            font-family: "Lucida Console", Monaco, monospace;
-            text-align: center;
-        }
-    </style>
+    h1 {
+      width: 500px;
+      margin: 0 auto;
+      font-family: 'Lucida Console', Monaco, monospace;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
-    <h1 class='p.textHeader'>Water Level in Lake Mead</h1>
+  <h1 class="p.textHeader">Water Level in Lake Mead (Average per year)</h1>
 
-    <!-- Update button -->
-    <div id="option">
-        <input name="updateButton" type="button" value="Update" onclick="updateData()" />
-    </div>
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="d3.legend.js"></script>
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script>
+    var margin = {
+        top: 20,
+        right: 20,
+        bottom: 70,
+        left: 40
+      },
+      width = screen.width - margin.left - margin.right,
+      height = screen.height / 2 - margin.top - margin.bottom;
 
-    <script>
-        var margin = {
-                top: 20,
-                right: 20,
-                bottom: 70,
-                left: 40
-            },
-            width = screen.width - margin.left - margin.right,
-            height = screen.height / 2 - margin.top - margin.bottom;
+    var parseDate = d3.time.format('%Y').parse; // Parse the date / time
 
-        // Parse the date / time
-        var parseDate = d3.time.format("%Y").parse;
+    var x = d3.scale.ordinal().rangeRoundBands([0, width], 0.05);
 
-        var x = d3.scale.ordinal().rangeRoundBands([0, width], .05);
+    var y = d3.scale.linear().range([height, 0]);
 
-        var y = d3.scale.linear().range([height, 0]);
+    var xAxis = d3.svg
+      .axis()
+      .scale(x)
+      .orient('bottom')
+      .tickFormat(d3.time.format('%Y'));
 
-        var xAxis = d3.svg.axis()
-            .scale(x)
-            .orient("bottom")
-            .tickFormat(d3.time.format("%Y"));
+    var tooltip = d3
+      .select('body')
+      .append('div')
+      .attr('class', 'toolTip');
 
-        var tooltip = d3.select("body").append("div").attr("class", "toolTip");
+    var yAxis = d3.svg
+      .axis()
+      .scale(y)
+      .orient('left')
+      .ticks(10);
 
-        var yAxis = d3.svg.axis()
-            .scale(y)
-            .orient("left")
-            .ticks(10);
+    var svg = d3
+      .select('body')
+      .append('svg')
+      .attr('width', width + margin.left + margin.right)
+      .attr('height', height + margin.top + margin.bottom)
+      .append('g')
+      .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
 
-        var svg = d3.select("body").append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform",
-                "translate(" + margin.left + "," + margin.top + ")");
+    d3.csv('water_level.csv', function(error, data) {
+      data.forEach(function(d) {
+        d.date = parseDate(d.YEAR);
+        d.value = d.AVG;
+        d.MAX = d.HIGH;
+        d.MIN = d.LOW;
+      });
 
-        d3.csv("water_level.csv", function (error, data) {
-            data.forEach(function (d) {
-                d.date = parseDate(d.Year);
-                d.value = d.AVG;
+      x.domain(
+        data.map(function(d) {
+          return d.date;
+        })
+      );
+      y.domain([800, 1250]);
+
+      svg
+        .append('g')
+        .attr('class', 'x axis')
+        .attr('transform', 'translate(0,' + height + ')')
+        .call(xAxis)
+        .selectAll('text')
+        .style('text-anchor', 'end')
+        .attr('dx', '-.8em')
+        .attr('dy', '-.55em')
+        .attr('transform', 'rotate(-90)');
+
+      svg
+        .append('g')
+        .attr('class', 'y axis')
+        .call(yAxis)
+        .append('text')
+        .attr('transform', 'rotate(-90)')
+        .attr('y', 6)
+        .attr('dy', '.71em')
+        .style('text-anchor', 'end')
+        .text('Average depth (feet)');
+
+      // Bars
+      svg
+        .selectAll('bar')
+        .data(data)
+        .enter()
+        .append('rect')
+        .style('fill', 'steelblue')
+        .attr('x', function(d) {
+          return x(d.date);
+        })
+        .attr('width', x.rangeBand() / 1.4) // width
+        .attr('y', function(d) {
+          return y(d.value);
+        })
+        .attr('height', function(d) {
+          return height - y(d.value);
+        })
+        .on('mousemove', function(d) {
+          tooltip
+            .style('left', d3.event.pageX - 50 + 'px')
+            .style('top', d3.event.pageY - 70 + 'px')
+            .style('display', 'inline-block')
+            .html(
+              'Max: ' +
+                d.MAX +
+                ' ft' +
+                '<br>' +
+                'Avg: ' +
+                d.value +
+                ' ft' +
+                '<br>' +
+                'Min: ' +
+                d.MIN +
+                ' ft'
+            );
+        })
+        .on('mouseenter', function(d, i) {
+          d3.select(this)
+            .transition()
+            .duration(500)
+            .attr({
+              style: 'fill: red'
             });
 
-            x.domain(data.map(function (d) {
-                return d.date;
-            }));
-            y.domain([800, 1250]);
-
-            svg.append("g")
-                .attr("class", "x axis")
-                .attr("transform", "translate(0," + height + ")")
-                .call(xAxis)
-                .selectAll("text")
-                .style("text-anchor", "end")
-                .attr("dx", "-.8em")
-                .attr("dy", "-.55em")
-                .attr("transform", "rotate(-90)");
-
-            svg.append("g")
-                .attr("class", "y axis")
-                .call(yAxis)
-                .append("text")
-                .attr("transform", "rotate(-90)")
-                .attr("y", 6)
-                .attr("dy", ".71em")
-                .style("text-anchor", "end")
-                .text("Depth (feet)");
-
-            svg.selectAll("bar")
-                .data(data)
-                .enter().append("rect")
-                .style("fill", "steelblue")
-                .attr("x", function (d) {
-                    return x(d.date);
-                })
-                .attr("width", x.rangeBand() / 1.4) // width
-                .attr("y", function (d) {
-                    return y(d.value);
-                })
-                .attr("height", function (d) {
-                    return height - y(d.value);
-                })
-                .on("mousemove", function (d) {
-                    tooltip
-                        .style("left", d3.event.pageX - 50 + "px")
-                        .style("top", d3.event.pageY - 70 + "px")
-                        .style("display", "inline-block")
-                        .html((d.value) + " feet");
-                })
-                .on("mouseenter", function (d, i) {
-                    d3.select(this)
-                        .transition()
-                        .duration(500)
-                        .attr({
-                            style: "fill: red",
-                        })
-
-                    // add comparioson line
-                    line = svg.append('line')
-                        .attr('id', 'limit')
-                        .attr('x1', 0)
-                        .attr('y1', d3.select(this).attr('y'))
-                        .attr('x2', width)
-                        .attr('y2', d3.select(this).attr('y'))
-                })
-                .on("mouseout", function () {
-                    d3.select(this)
-                        .transition()
-                        .duration(500)
-                        .attr({
-                            style: "fill: steelblue",
-                        })
-                    svg.selectAll('#limit').remove()
-                });
+          // add comparioson line
+          line = svg
+            .append('line')
+            .attr('id', 'limit')
+            .attr('x1', 0)
+            .attr('y1', d3.select(this).attr('y'))
+            .attr('x2', width)
+            .attr('y2', d3.select(this).attr('y'));
+        })
+        .on('mouseout', function() {
+          d3.select(this)
+            .transition()
+            .duration(500)
+            .attr({
+              style: 'fill: steelblue'
+            });
+          svg.selectAll('#limit').remove();
         });
-    </script>
-
+      svg
+        .selectAll('circle')
+        .data(data)
+        .enter()
+        .append('circle')
+        .style('stroke', 'gray')
+        .style('fill', 'black')
+        .attr('r', 5)
+        .attr('cx', function(d) {
+          return x(d.date) + 7;
+        })
+        .attr('cy', function(d) {
+          return y(d.MAX);
+        });
+    });
+  </script>
 </body>
