--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <body>
   <h1 class="p.textHeader">Water Level in Lake Mead (Average per year)</h1>
 
-  <script src="http://d3js.org/d3.v3.min.js"></script>
-  <script src="d3.legend.js"></script>
+  <script src="https://d3js.org/d3.v3.min.js"></script>
 
   <script>
     var margin = {
