--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       padding: 2;
     }
 
+    .legend rect {
+      fill: white;
+      stroke: black;
+      opacity: 0.8;
+    }
+
     h1 {
       width: 500px;
       margin: 0 auto;
@@ -47,6 +53,7 @@
   <h1 class="p.textHeader">Water Level in Lake Mead (Average per year)</h1>
 
   <script src="https://d3js.org/d3.v3.min.js"></script>
+  <script src="d3.legend.js"></script>
 
   <script>
     var margin = {
@@ -88,6 +95,21 @@
       .attr('height', height + margin.top + margin.bottom)
       .append('g')
       .attr('transform', 'translate(' + margin.left + ',' + margin.top + ')');
+
+    legend = svg
+      .append('g')
+      .attr('class', 'legend')
+      .attr('transform', 'translate(50,20)')
+      .style('font-size', '10px')
+      .call(d3.legend);
+
+    setTimeout(function() {
+      legend
+        .style('font-size', '12')
+        .attr('class', 'legend')
+        .attr('data-style-padding', 5)
+        .call(d3.legend);
+    }, 1000);
 
     d3.csv('water_level.csv', function(error, data) {
       data.forEach(function(d) {
@@ -196,6 +218,9 @@
         .style('opacity', 0.7)
         .style('fill', 'black')
         .attr('r', 3)
+        .attr('data-legend', function(d) {
+          return 'max level';
+        })
         .attr('cx', function(d) {
           return x(d.date) + 7;
         })
