added index html

--- a/assignment_4/index.html
+++ b/assignment_4/index.html
@@ -37,6 +37,7 @@
       innerRadius = radius - 120;
 
     var cluster = d3.cluster().size([360, innerRadius]);
+    var cluster = d3.cluster().size([360, innerRadius]);
 
     var line = d3
       .radialLine()
