moved button to right corner

--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -35,8 +35,8 @@
         <p style="color:white;">RIGHT:</p>
     </div>
     <div id="main">
-        <span style="font-size:30px;cursor:pointer" onclick="openLeftControls()" id="sideButton">&#9776;</span>
-        <span style="font-size:30px;cursor:pointer;float:right;position:absolute" onclick="openRightControls()">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;" onclick="openLeftControls()" id="leftSideButton">&#9776;</span>
+        <span style="font-size:30px;cursor:pointer;position:fixed;right:6px" onclick="openRightControls()">&#9776;</span>
     </div>
     <div id="map"></div>
     <script>
