--- a/assignment_5/index.html
+++ b/assignment_5/index.html
@@ -263,13 +263,12 @@
             let activities = {
                 'IN_VEHICLE': 'In car 🚗',
                 'ON_FOOT': 'On foot 🦶',
-                'NA': 'Not available 🚫',
+                'NA': '"Not available" 🚫',
                 'ON_BICYCLE': 'On bike 🚴',
                 'STILL': 'Still 😑',
                 'TILTING': 'Tilting 🤣',
                 'UNKNOWN': 'Unknown ❓'
             }
-
             return activities[activity];
         }
 
